# tax-pro

./: .dockerignore  .env.example  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  Dockerfile.prebuilt  LICENSE  README.md  Tax 2025.xlsx  cloudbuild.yaml  docker-compose.yml  firestore.indexes.json  firestore.rules  nx.json  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.base.json
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-04-13-landing-page.md  2026-04-15-tax-mcp-npm-publish.md
docs/superpowers/specs/: 2026-04-13-landing-page-design.md  2026-04-15-tax-mcp-npm-publish-design.md
libs/db/: jest.config.cts  package.json  project.json
libs/db/src/: index.ts  seed.ts
libs/db/src/lib/: collections.ts
libs/shared/types/: jest.config.cts  package.json  project.json
libs/shared/types/src/: index.ts
libs/shared/utils/: jest.config.cts  package.json  project.json
libs/tax-mcp/: .mcpbignore  CHANGELOG.md  README.md  manifest.json  package.json  project.json  tax-mcp.mcpb  tsconfig.json
libs/tax-mcp/src/: main.ts
tax-mcp/: .gcloudignore  main.py  project.json  pyproject.toml
tax-mcp/tools/: expenses.py  income.py  investments.py  receipts.py  rental.py  reports.py  tax_years.py
terraform/: example.tfvars  main.tf  outputs.tf  variables.tf
tools/tax-mcp/: README.md  project.json
tools/tax-mcp-py/: Dockerfile  project.json
tools/tax-mcp-py/tools/: expenses.py
tools/tax-mcp/src/: main.ts
web/: eslint.config.mjs  index.html  project.json  vite.config.ts
web-e2e/src/: example.spec.ts
web/src/app/: app.config.ts
(+174 files in other folders)
